; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/xen/xenstore/extr_xenstore.c_xs_directory.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/xen/xenstore/extr_xenstore.c_xs_directory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xs_transaction = type { i32 }
%struct.sbuf = type { i32 }

@XS_DIRECTORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xs_directory(i32 %0, i8* %1, i8* %2, i32* %3, i8*** %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.xs_transaction, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8***, align 8
  %12 = alloca %struct.sbuf*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = getelementptr inbounds %struct.xs_transaction, %struct.xs_transaction* %7, i32 0, i32 0
  store i32 %0, i32* %16, align 4
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i8*** %4, i8**** %11, align 8
  store i32 0, i32* %14, align 4
  %17 = load i8*, i8** %8, align 8
  %18 = load i8*, i8** %9, align 8
  %19 = call %struct.sbuf* @xs_join(i8* %17, i8* %18)
  store %struct.sbuf* %19, %struct.sbuf** %12, align 8
  %20 = load i32, i32* @XS_DIRECTORY, align 4
  %21 = load %struct.sbuf*, %struct.sbuf** %12, align 8
  %22 = call i32 @sbuf_data(%struct.sbuf* %21)
  %23 = getelementptr inbounds %struct.xs_transaction, %struct.xs_transaction* %7, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @xs_single(i32 %24, i32 %20, i32 %22, i32* %14, i8** %13)
  store i32 %25, i32* %15, align 4
  %26 = load %struct.sbuf*, %struct.sbuf** %12, align 8
  %27 = call i32 @sbuf_delete(%struct.sbuf* %26)
  %28 = load i32, i32* %15, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %5
  %31 = load i32, i32* %15, align 4
  store i32 %31, i32* %6, align 4
  br label %38

32:                                               ; preds = %5
  %33 = load i8*, i8** %13, align 8
  %34 = load i32, i32* %14, align 4
  %35 = load i32*, i32** %10, align 8
  %36 = call i8** @split(i8* %33, i32 %34, i32* %35)
  %37 = load i8***, i8**** %11, align 8
  store i8** %36, i8*** %37, align 8
  store i32 0, i32* %6, align 4
  br label %38

38:                                               ; preds = %32, %30
  %39 = load i32, i32* %6, align 4
  ret i32 %39
}

declare dso_local %struct.sbuf* @xs_join(i8*, i8*) #1

declare dso_local i32 @xs_single(i32, i32, i32, i32*, i8**) #1

declare dso_local i32 @sbuf_data(%struct.sbuf*) #1

declare dso_local i32 @sbuf_delete(%struct.sbuf*) #1

declare dso_local i8** @split(i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
